# gtk-magick-project

./: .clang-format  CMakeLists.txt  LICENSE  README.md
include/: BackgroundWorker.h  Image.h  ImageAsync.h  MainWindow.h  NumberEntry.h  Watermark.h  helloworld.h
src/: BackgroundWorker.cc  Image.cc  ImageAsync.cc  MainWindow.cc  NumberEntry.cc  Watermark.cc  helloworld.cc  main.cc
